syntax = "proto3";

option csharp_namespace = "DiscountService.Protos";
service  DiscountServiceProto{

	rpc GetDiscountByCode(RequestGetDiscountByCode) returns(ResultGetDiscountByCode);
	rpc GetDiscountById(RequestGetDiscountById) returns(ResultGetDiscountByCode);
	rpc UseDiscount(RequestUseDiscount)returns(ResultUseDiscount);
	rpc AddNewDiscount(RequestAddNewDiscount) returns(ResultAddNewDiscount);
}
message RequestGetDiscountByCode
{
	string code=1;

}
message RequestGetDiscountById
{
	string Id=1;
}
message ResultGetDiscountByCode
{
	DiscountInfo Data=1;
	bool isSuccess=2;
	string Message=3;
}
message DiscountInfo
{
	string Id=1;
	double Amount=2;
	string Code=3;
	bool  Used=4;
}

message RequestUseDiscount{
	string Id=1;
}
message ResultUseDiscount{
	bool isSuccess=1;
}
message RequestAddNewDiscount{
	double Amount=1;
	string code=2;
}
message ResultAddNewDiscount{
	bool isSuccess=1;
}